# oganesson-rs

./: Cargo.toml  README.md
src/: main.rs
src/cmd/: app.rs  mod.rs  project.rs
src/core/: actix.rs  axum.rs  mod.rs  salvo.rs
template/: Dockerfile.tera  dockerun.tera  rustfmt.tera
template/actix/: Cargo.tera  README.tera
template/actix/app/: Cargo.tera  config.tera
template/actix/app/src/: main.tera
template/actix/app/src/cmd/: hello.tera  mod.tera  serve.tera
template/actix/app/src/handler/: greeter.tera
template/actix/app/src/middleware/: auth.tera
template/actix/app/src/router/: mod.tera  route.tera
template/actix/infra/: Cargo.tera
template/actix/infra/src/core/: cache.tera  config.tera  db.tera  mod.tera
template/actix/infra/src/middleware/: log.tera  metric.tera  mod.tera  panic.tera  trace.tera
template/actix/infra/src/status/: api_err.tera  api_ok.tera
template/actix/infra/src/util/: iden.tera
template/actix/repo/: Cargo.tera
template/actix/repo/src/dao/: demo.tera
template/actix/repo/src/schema/: table.tera
template/axum/: Cargo.tera  README.tera
template/axum/app/: Cargo.tera  config.tera
template/axum/app/src/: main.tera
template/axum/app/src/cmd/: serve.tera
template/axum/app/src/handler/: greeter.tera
template/axum/app/src/router/: mod.tera
template/axum/infra/: Cargo.tera
template/axum/infra/src/: lib.tera
template/salvo/: Cargo.tera  README.tera
template/salvo/app/: Cargo.tera  config.tera
template/salvo/app/src/: main.tera
template/salvo/infra/: Cargo.tera
template/salvo/infra/src/: lib.tera
(+27 files in other folders)
