[package]
name = "oganesson-rs"
version = "0.0.1"
edition = "2024"
authors = ["ShengHui <847713844@qq.com>"]
description = "The Rust web development scaffold, support salvo and axum"
keywords = ["web", "api", "actix-web", "salvo", "axum"]
license = "MIT"
repository = "https://github.com/noble-gase/oganesson-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "og"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
