[package]
name = "oganesson-rs"
version = "0.2.3"
edition = "2024"
authors = ["ShengHui <847713844@qq.com>"]
description = "The Rust web development scaffold, support actix-web, axum and salvo"
keywords = ["web", "api", "actix-web", "axum", "salvo"]
license = "MIT"
repository = "https://github.com/noble-gase/oganesson-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "og"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
inquire = "0.9"
tera = "2"
serde = { version = "1", features = ["derive"] }
